--- a/index.html
+++ b/index.html
@@ -29,18 +29,10 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-lg px-5">
-      <!-- Use class for "past", "present", and "future" to apply styles to the
-        time-block divs accordingly. The javascript will need to do this by
-        adding/removing these classes on each div by comparing the hour in the
-        id to the current hour. The html provided below is meant to be an example
-        demonstrating how the css provided can be leveraged to create the
-        desired layout and colors. The html below should be removed or updated
-        in the finished product. Remember to delete this comment once the
-        code is implemented.
-        -->
+      
 
-      <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block past">
+      <!-- Removed "past", "present", "future" classes to be added with js, added data-hour to be used by js to compare to current hour  -->
+      <div id="hour-9" class="row time-block" data-hour="9">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -48,8 +40,8 @@
         </button>
       </div>
 
-      <!-- Example of a a present time block. The "present" class adds a red background color. -->
-      <div id="hour-10" class="row time-block present">
+      <!-- Removed "past", "present", "future" classes to be added with js, added data-hour to be used by js to compare to current hour  -->
+      <div id="hour-10" class="row time-block" data-hour="10">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -57,9 +49,63 @@
         </button>
       </div>
 
-      <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="hour-11" class="row time-block future">
+      <!-- Removed "past", "present", "future" classes to be added with js, added data-hour to be used by js to compare to current hour  -->
+      <div id="hour-11" class="row time-block" data-hour="11">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+
+      <!-- Removed "past", "present", "future" classes to be added with js, added data-hour to be used by js to compare to current hour. Added hour for 12PM.  -->
+      <div id="hour-12" class="row time-block" data-hour="12">
+        <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+
+      <!-- Removed "past", "present", "future" classes to be added with js, added data-hour to be used by js to compare to current hour. Added hour for 1PM.  -->
+      <div id="hour-13" class="row time-block" data-hour="13">
+        <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+
+      <!-- Removed "past", "present", "future" classes to be added with js, added data-hour to be used by js to compare to current hour. Added hour for 2PM.  -->
+      <div id="hour-14" class="row time-block" data-hour="14">
+        <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+
+      <!-- Removed "past", "present", "future" classes to be added with js, added data-hour to be used by js to compare to current hour. Added hour for 3PM.  -->
+      <div id="hour-15" class="row time-block" data-hour="15">
+        <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+
+      <!-- Removed "past", "present", "future" classes to be added with js, added data-hour to be used by js to compare to current hour. Added hour for 4PM.  -->
+      <div id="hour-16" class="row time-block" data-hour="16">
+        <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+
+      <!-- Removed "past", "present", "future" classes to be added with js, added data-hour to be used by js to compare to current hour. Added hour for 5PM.  -->
+      <div id="hour-17" class="row time-block" data-hour="17">
+        <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
@@ -72,7 +118,9 @@
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
       crossorigin="anonymous"
     ></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/plugin/advancedFormat.js"></script>
+    <script>dayjs.extend(window.dayjs_plugin_advancedFormat)</script>
     <script src="./Assets/script.js"></script>
+    
   </body>
 </html>
