Add function to select id for each button clicked

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
       crossorigin="anonymous"
     ></script>
+    <!-- Added plugin to use advanced format to display the day of the month with ordinal numbers  -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/plugin/advancedFormat.js"></script>
     <script>dayjs.extend(window.dayjs_plugin_advancedFormat)</script>
     <script src="./Assets/script.js"></script>
